fixed alignment

--- a/lesson3/css/main.css
+++ b/lesson3/css/main.css
@@ -70,6 +70,9 @@ footer{
     padding: .01rem;
 }
 /*Typography*/
+p{
+    text-align: center;
+}
 
 /*Color*/
 section{
